--- a/style.css
+++ b/style.css
@@ -14,34 +14,67 @@ ul{
     gap: 1em;
 }
 
-ul li a{
+li a{
     list-style-type: none;
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
+
+a:hover, a:active {
+    color: beige;
+}
+
 
 nav {
     width: 100%;
-    height: 20px;
+    height: 1,5em;
     background-color: #d1bd9e;
     padding: 1em;
 }
 
 h1 {
-    font-size: 50px;
-}
-h1 p{
+    font-size: 3em;
     text-align: center;
+}
+
+h2 {
     font-size: medium;
     background-color: #d1bd9e;
-    width: 300px;
+    padding: 1em;
+    margin: 1em;
+    text-align: center; 
+}
+
+h2 , article{
+    text-align: center;
+}
+
+article { 
+    font-size: medium;
+    background-color: #d1bd9e;
+    width: 400px;
     padding: 50px;
     margin: 20px;
+}
+
+p {
+    background-color: #d1bd9e;
+}
+
+
+.home_page {
+    font-size: 50px;
+    position: absolute;
+    top: 90px;
+    left: 30px;
+
 }
 
 .responsive {
      width: 100%;
      height: auto;
+     margin-bottom: 2%;
 }
 
 .middle {
@@ -52,17 +85,30 @@ h1 p{
 
 }
 
+
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5%;
+    margin-top: 1%;
     margin-bottom: 5%;
     width: 50%;
 }
 
-.top-left {
-    position: absolute;
-    top: 90px;
-    left: 30px;
+
+.flex-container {
+    display: flex;
+    justify-content: space-around;
 }
+
+.scroll-images-maui {
+    background-color: #d1bd9e;
+    overflow: auto;
+    white-space: nowrap;
+    padding: 0,2em;  
+}
+
+.scroll-images-maui img{
+    padding: 1em;
+}
+
