--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a:hover, a:active {
 
 nav {
     width: 100%;
-    height: 1,5em;
+    height: 1.5em;
     background-color: #d1bd9e;
     padding: 1em;
 }
@@ -55,9 +55,9 @@ h2 , article{
 article { 
     font-size: medium;
     background-color: #d1bd9e;
-    width: 400px;
-    padding: 50px;
-    margin: 20px;
+    width: 22em;
+    padding: 2em;
+    margin: 1em;
 }
 
 footer {
@@ -66,15 +66,16 @@ footer {
 
 p {
     background-color: #d1bd9e;
+    margin: 0.5em;
 }
 
 
 
-.home_page {
-    font-size: 50px;
+.homepage_text {
+    font-size: 3.5em;
     position: absolute;
-    top: 90px;
-    left: 30px;
+    top: 2em;
+    left: 1em;
 
 }
 
@@ -113,7 +114,7 @@ p {
     background-color: #d1bd9e;
     overflow: auto;
     white-space: nowrap;
-    padding: 0,2em; 
+    padding: 0.2em; 
 }
 
 .scroll-images-maui img{
